// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multiplex TestResultDetailsModal matches screenshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="ReactModal__Body--open"
  >
    <div
      data-react-modal-body-trap=""
      style="position: absolute; opacity: 0;"
      tabindex="0"
    />
    <div>
      <div
        class="ReactModal__Overlay prime-modal-overlay display-flex flex-align-center flex-justify-center"
      >
        <div
          aria-label="Result details for First Middle Last"
          aria-modal="true"
          class="ReactModal__Content"
          role="dialog"
          style="position: initial; top: 40px; left: 40px; right: 40px; bottom: 40px; border: 1px solid #ccc; background: rgb(255, 255, 255); overflow: auto; border-radius: 4px; outline: none; padding: 20px; max-height: 90vh; width: 50em;"
          tabindex="-1"
        >
          <div
            class="display-flex flex-justify"
          >
            <h1
              class="font-heading-lg margin-top-05 margin-bottom-0"
              id="result-detail-title"
            >
              Result details
            </h1>
            <div
              class="sr-time-of-test-buttons"
            >
              <button
                class="modal__close-button"
                style="cursor: pointer;"
              >
                <img
                  alt="Close"
                  class="modal__close-img"
                  src="close.svg"
                />
              </button>
            </div>
          </div>
          <div
            class="border-top border-base-lighter margin-x-neg-205 margin-top-1"
          />
          <h2
            class="font-sans-md margin-top-3"
          >
            Patient
          </h2>
          <div
            class="width-full font-sans-md add-list-reset border-base-lighter border-2px radius-md padding-x-2 padding-y-1 grid-row flex-row padding-0"
          >
            <div
              class="grid-col padding-2 border-right-1px border-base-lighter"
            >
              <span
                class="text-bold text-no-strike text-ink display-block margin-bottom-1"
              >
                Name
              </span>
              <span
                aria-describedby="result-detail-title"
                class="font-sans-lg"
              >
                First Middle Last
              </span>
            </div>
            <div
              class="grid-col padding-2"
            >
              <span
                class="text-bold text-no-strike text-ink display-block margin-bottom-1"
              >
                Date of birth
              </span>
              <span
                aria-describedby="result-detail-title"
                class="font-sans-lg"
              >
                08/07/1990
              </span>
            </div>
          </div>
          <h2
            class="font-sans-md margin-top-3"
          >
            Test information
          </h2>
          <table
            class="width-full font-sans-md add-list-reset border-base-lighter border-2px radius-md padding-x-2 padding-y-1"
          >
            <tbody>
              <tr>
                <th
                  class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
                >
                  COVID-19 result
                </th>
                <td
                  class="padding-y-3 border-bottom-1px border-base-lighter"
                >
                  POSITIVE
                </td>
              </tr>
              <tr>
                <th
                  class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
                >
                  Flu A result
                </th>
                <td
                  class="padding-y-3 border-bottom-1px border-base-lighter"
                >
                  NEGATIVE
                </td>
              </tr>
              <tr>
                <th
                  class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
                >
                  Flu B result
                </th>
                <td
                  class="padding-y-3 border-bottom-1px border-base-lighter"
                >
                  POSITIVE
                </td>
              </tr>
              <tr>
                <th
                  class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
                >
                  Test date
                </th>
                <td
                  class="padding-y-3 border-bottom-1px border-base-lighter"
                >
                  01/28/2022 5:56pm
                </td>
              </tr>
              <tr>
                <th
                  class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
                >
                  Device
                </th>
                <td
                  class="padding-y-3 border-bottom-1px border-base-lighter"
                >
                  Fake device
                </td>
              </tr>
              <tr>
                <th
                  class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
                >
                  Symptoms
                </th>
                <td
                  class="padding-y-3 border-bottom-1px border-base-lighter"
                >
                  No symptoms
                </td>
              </tr>
              <tr>
                <th
                  class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
                >
                  Symptom onset
                </th>
                <td
                  class="padding-y-3 border-bottom-1px border-base-lighter"
                >
                  Invalid date
                </td>
              </tr>
              <tr>
                <th
                  class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
                >
                  Pregnant?
                </th>
                <td
                  class="padding-y-3 border-bottom-1px border-base-lighter"
                >
                  --
                </td>
              </tr>
              <tr>
                <th
                  class="text-bold text-no-strike text-ink padding-y-3 width-card-lg text-left"
                >
                  Submitted by
                </th>
                <td
                  class="padding-y-3"
                >
                  firstName middle last
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <div
      data-react-modal-body-trap=""
      style="position: absolute; opacity: 0;"
      tabindex="0"
    />
    <div
      class="ReactModalPortal"
    />
  </body>,
  "container": <div>
    <div
      class="ReactModal__Overlay prime-modal-overlay display-flex flex-align-center flex-justify-center"
    >
      <div
        aria-label="Result details for First Middle Last"
        aria-modal="true"
        class="ReactModal__Content"
        role="dialog"
        style="position: initial; top: 40px; left: 40px; right: 40px; bottom: 40px; border: 1px solid #ccc; background: rgb(255, 255, 255); overflow: auto; border-radius: 4px; outline: none; padding: 20px; max-height: 90vh; width: 50em;"
        tabindex="-1"
      >
        <div
          class="display-flex flex-justify"
        >
          <h1
            class="font-heading-lg margin-top-05 margin-bottom-0"
            id="result-detail-title"
          >
            Result details
          </h1>
          <div
            class="sr-time-of-test-buttons"
          >
            <button
              class="modal__close-button"
              style="cursor: pointer;"
            >
              <img
                alt="Close"
                class="modal__close-img"
                src="close.svg"
              />
            </button>
          </div>
        </div>
        <div
          class="border-top border-base-lighter margin-x-neg-205 margin-top-1"
        />
        <h2
          class="font-sans-md margin-top-3"
        >
          Patient
        </h2>
        <div
          class="width-full font-sans-md add-list-reset border-base-lighter border-2px radius-md padding-x-2 padding-y-1 grid-row flex-row padding-0"
        >
          <div
            class="grid-col padding-2 border-right-1px border-base-lighter"
          >
            <span
              class="text-bold text-no-strike text-ink display-block margin-bottom-1"
            >
              Name
            </span>
            <span
              aria-describedby="result-detail-title"
              class="font-sans-lg"
            >
              First Middle Last
            </span>
          </div>
          <div
            class="grid-col padding-2"
          >
            <span
              class="text-bold text-no-strike text-ink display-block margin-bottom-1"
            >
              Date of birth
            </span>
            <span
              aria-describedby="result-detail-title"
              class="font-sans-lg"
            >
              08/07/1990
            </span>
          </div>
        </div>
        <h2
          class="font-sans-md margin-top-3"
        >
          Test information
        </h2>
        <table
          class="width-full font-sans-md add-list-reset border-base-lighter border-2px radius-md padding-x-2 padding-y-1"
        >
          <tbody>
            <tr>
              <th
                class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
              >
                COVID-19 result
              </th>
              <td
                class="padding-y-3 border-bottom-1px border-base-lighter"
              >
                POSITIVE
              </td>
            </tr>
            <tr>
              <th
                class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
              >
                Flu A result
              </th>
              <td
                class="padding-y-3 border-bottom-1px border-base-lighter"
              >
                NEGATIVE
              </td>
            </tr>
            <tr>
              <th
                class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
              >
                Flu B result
              </th>
              <td
                class="padding-y-3 border-bottom-1px border-base-lighter"
              >
                POSITIVE
              </td>
            </tr>
            <tr>
              <th
                class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
              >
                Test date
              </th>
              <td
                class="padding-y-3 border-bottom-1px border-base-lighter"
              >
                01/28/2022 5:56pm
              </td>
            </tr>
            <tr>
              <th
                class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
              >
                Device
              </th>
              <td
                class="padding-y-3 border-bottom-1px border-base-lighter"
              >
                Fake device
              </td>
            </tr>
            <tr>
              <th
                class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
              >
                Symptoms
              </th>
              <td
                class="padding-y-3 border-bottom-1px border-base-lighter"
              >
                No symptoms
              </td>
            </tr>
            <tr>
              <th
                class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
              >
                Symptom onset
              </th>
              <td
                class="padding-y-3 border-bottom-1px border-base-lighter"
              >
                Invalid date
              </td>
            </tr>
            <tr>
              <th
                class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
              >
                Pregnant?
              </th>
              <td
                class="padding-y-3 border-bottom-1px border-base-lighter"
              >
                --
              </td>
            </tr>
            <tr>
              <th
                class="text-bold text-no-strike text-ink padding-y-3 width-card-lg text-left"
              >
                Submitted by
              </th>
              <td
                class="padding-y-3"
              >
                firstName middle last
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`non-multiplex TestResultDetailsModal matches screenshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="ReactModal__Body--open"
  >
    <div
      data-react-modal-body-trap=""
      style="position: absolute; opacity: 0;"
      tabindex="0"
    />
    <div>
      <div
        class="ReactModal__Overlay prime-modal-overlay display-flex flex-align-center flex-justify-center"
      >
        <div
          aria-label="Result details for First Middle Last"
          aria-modal="true"
          class="ReactModal__Content"
          role="dialog"
          style="position: initial; top: 40px; left: 40px; right: 40px; bottom: 40px; border: 1px solid #ccc; background: rgb(255, 255, 255); overflow: auto; border-radius: 4px; outline: none; padding: 20px; max-height: 90vh; width: 50em;"
          tabindex="-1"
        >
          <div
            class="display-flex flex-justify"
          >
            <h1
              class="font-heading-lg margin-top-05 margin-bottom-0"
              id="result-detail-title"
            >
              Result details
            </h1>
            <div
              class="sr-time-of-test-buttons"
            >
              <button
                class="modal__close-button"
                style="cursor: pointer;"
              >
                <img
                  alt="Close"
                  class="modal__close-img"
                  src="close.svg"
                />
              </button>
            </div>
          </div>
          <div
            class="border-top border-base-lighter margin-x-neg-205 margin-top-1"
          />
          <h2
            class="font-sans-md margin-top-3"
          >
            Patient
          </h2>
          <div
            class="width-full font-sans-md add-list-reset border-base-lighter border-2px radius-md padding-x-2 padding-y-1 grid-row flex-row padding-0"
          >
            <div
              class="grid-col padding-2 border-right-1px border-base-lighter"
            >
              <span
                class="text-bold text-no-strike text-ink display-block margin-bottom-1"
              >
                Name
              </span>
              <span
                aria-describedby="result-detail-title"
                class="font-sans-lg"
              >
                First Middle Last
              </span>
            </div>
            <div
              class="grid-col padding-2"
            >
              <span
                class="text-bold text-no-strike text-ink display-block margin-bottom-1"
              >
                Date of birth
              </span>
              <span
                aria-describedby="result-detail-title"
                class="font-sans-lg"
              >
                08/07/1990
              </span>
            </div>
          </div>
          <h2
            class="font-sans-md margin-top-3"
          >
            Test information
          </h2>
          <table
            class="width-full font-sans-md add-list-reset border-base-lighter border-2px radius-md padding-x-2 padding-y-1"
          >
            <tbody>
              <tr>
                <th
                  class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
                >
                  COVID-19 result
                </th>
                <td
                  class="padding-y-3 border-bottom-1px border-base-lighter"
                >
                  NEGATIVE
                </td>
              </tr>
              <tr>
                <th
                  class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
                >
                  Test date
                </th>
                <td
                  class="padding-y-3 border-bottom-1px border-base-lighter"
                >
                  01/28/2022 5:56pm
                </td>
              </tr>
              <tr>
                <th
                  class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
                >
                  Device
                </th>
                <td
                  class="padding-y-3 border-bottom-1px border-base-lighter"
                >
                  Fake device
                </td>
              </tr>
              <tr>
                <th
                  class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
                >
                  Symptoms
                </th>
                <td
                  class="padding-y-3 border-bottom-1px border-base-lighter"
                >
                  No symptoms
                </td>
              </tr>
              <tr>
                <th
                  class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
                >
                  Symptom onset
                </th>
                <td
                  class="padding-y-3 border-bottom-1px border-base-lighter"
                >
                  Invalid date
                </td>
              </tr>
              <tr>
                <th
                  class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
                >
                  Pregnant?
                </th>
                <td
                  class="padding-y-3 border-bottom-1px border-base-lighter"
                >
                  --
                </td>
              </tr>
              <tr>
                <th
                  class="text-bold text-no-strike text-ink padding-y-3 width-card-lg text-left"
                >
                  Submitted by
                </th>
                <td
                  class="padding-y-3"
                >
                  firstName middle last
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <div
      data-react-modal-body-trap=""
      style="position: absolute; opacity: 0;"
      tabindex="0"
    />
    <div
      class="ReactModalPortal"
    />
  </body>,
  "container": <div>
    <div
      class="ReactModal__Overlay prime-modal-overlay display-flex flex-align-center flex-justify-center"
    >
      <div
        aria-label="Result details for First Middle Last"
        aria-modal="true"
        class="ReactModal__Content"
        role="dialog"
        style="position: initial; top: 40px; left: 40px; right: 40px; bottom: 40px; border: 1px solid #ccc; background: rgb(255, 255, 255); overflow: auto; border-radius: 4px; outline: none; padding: 20px; max-height: 90vh; width: 50em;"
        tabindex="-1"
      >
        <div
          class="display-flex flex-justify"
        >
          <h1
            class="font-heading-lg margin-top-05 margin-bottom-0"
            id="result-detail-title"
          >
            Result details
          </h1>
          <div
            class="sr-time-of-test-buttons"
          >
            <button
              class="modal__close-button"
              style="cursor: pointer;"
            >
              <img
                alt="Close"
                class="modal__close-img"
                src="close.svg"
              />
            </button>
          </div>
        </div>
        <div
          class="border-top border-base-lighter margin-x-neg-205 margin-top-1"
        />
        <h2
          class="font-sans-md margin-top-3"
        >
          Patient
        </h2>
        <div
          class="width-full font-sans-md add-list-reset border-base-lighter border-2px radius-md padding-x-2 padding-y-1 grid-row flex-row padding-0"
        >
          <div
            class="grid-col padding-2 border-right-1px border-base-lighter"
          >
            <span
              class="text-bold text-no-strike text-ink display-block margin-bottom-1"
            >
              Name
            </span>
            <span
              aria-describedby="result-detail-title"
              class="font-sans-lg"
            >
              First Middle Last
            </span>
          </div>
          <div
            class="grid-col padding-2"
          >
            <span
              class="text-bold text-no-strike text-ink display-block margin-bottom-1"
            >
              Date of birth
            </span>
            <span
              aria-describedby="result-detail-title"
              class="font-sans-lg"
            >
              08/07/1990
            </span>
          </div>
        </div>
        <h2
          class="font-sans-md margin-top-3"
        >
          Test information
        </h2>
        <table
          class="width-full font-sans-md add-list-reset border-base-lighter border-2px radius-md padding-x-2 padding-y-1"
        >
          <tbody>
            <tr>
              <th
                class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
              >
                COVID-19 result
              </th>
              <td
                class="padding-y-3 border-bottom-1px border-base-lighter"
              >
                NEGATIVE
              </td>
            </tr>
            <tr>
              <th
                class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
              >
                Test date
              </th>
              <td
                class="padding-y-3 border-bottom-1px border-base-lighter"
              >
                01/28/2022 5:56pm
              </td>
            </tr>
            <tr>
              <th
                class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
              >
                Device
              </th>
              <td
                class="padding-y-3 border-bottom-1px border-base-lighter"
              >
                Fake device
              </td>
            </tr>
            <tr>
              <th
                class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
              >
                Symptoms
              </th>
              <td
                class="padding-y-3 border-bottom-1px border-base-lighter"
              >
                No symptoms
              </td>
            </tr>
            <tr>
              <th
                class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
              >
                Symptom onset
              </th>
              <td
                class="padding-y-3 border-bottom-1px border-base-lighter"
              >
                Invalid date
              </td>
            </tr>
            <tr>
              <th
                class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
              >
                Pregnant?
              </th>
              <td
                class="padding-y-3 border-bottom-1px border-base-lighter"
              >
                --
              </td>
            </tr>
            <tr>
              <th
                class="text-bold text-no-strike text-ink padding-y-3 width-card-lg text-left"
              >
                Submitted by
              </th>
              <td
                class="padding-y-3"
              >
                firstName middle last
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
